--- a/finance-understanding-interest.qmd
+++ b/finance-understanding-interest.qmd
@@ -11,3 +11,11 @@ FILE: [understanding-interest.pptx](https://github.com/coltongearhart/math125/bl
 FILE: [understanding-interest-STARTER.docx](https://github.com/coltongearhart/math125/blob/main/finance/understanding-interest-STARTER.docx)
 
 <embed src="finance/understanding-interest-COMPLETED.pdf" type="application/pdf" width="100%" height="1000px"></embed>
+
+## Activity
+
+FILE: [simple-and-compound-interest.docx](https://github.com/coltongearhart/math125/blob/main/finance/activities/simple-and-compound-interest.docx)
+
+Instructors can contact me for keys :)
+
+<embed src="finance/activities/simple-and-compound-interest.pdf" type="application/pdf" width="100%" height="1000px"></embed>
