--- a/stats-collecting-data.qmd
+++ b/stats-collecting-data.qmd
@@ -11,3 +11,11 @@ FILE: [collecting-data.pptx](https://github.com/coltongearhart/math125/blob/main
 FILE: [collecting-data-STARTER.docx](https://github.com/coltongearhart/math125/blob/main/stats/collecting-data-STARTER.docx)
 
 <embed src="stats/collecting-data-COMPLETED.pdf" type="application/pdf" width="100%" height="1000px"></embed>
+
+## Activity
+
+FILE: [collecting-data.docx](https://github.com/coltongearhart/math125/blob/main/stats/activities/collecting-data.docx)
+
+Instructors can contact me for keys :)
+
+<embed src="stats/activities/collecting-data.pdf" type="application/pdf" width="100%" height="1000px"></embed>
