--- a/stats-displaying-data.qmd
+++ b/stats-displaying-data.qmd
@@ -11,3 +11,12 @@ FILE: [displaying-data.pptx](https://github.com/coltongearhart/math125/blob/main
 FILE: [displaying-data-STARTER.docx](https://github.com/coltongearhart/math125/blob/main/stats/displaying-data-STARTER.docx)
 
 <embed src="stats/displaying-data-COMPLETED.pdf" type="application/pdf" width="100%" height="1000px"></embed>
+
+## Activity
+
+FILE: [deceptions-in-visual-displays-of-data.docx](https://github.com/coltongearhart/math125/blob/main/stats/activities/deceptions-in-visual-displays-of-data.docx)
+
+Instructors can contact me for keys :)
+
+<embed src="stats/activities/deceptions-in-visual-displays-of-data.pdf" type="application/pdf" width="100%" height="1000px"></embed>
+
