--- a/stats-linear-regression.qmd
+++ b/stats-linear-regression.qmd
@@ -13,3 +13,9 @@ FILE: [linear-regression-STARTER.docx](https://github.com/coltongearhart/math125
 <embed src="stats/linear-regression-COMPLETED.pdf" type="application/pdf" width="100%" height="1000px"></embed>
 
 <embed src="stats/table-correlation-critical-values.pdf" type="application/pdf" width="100%" height="500px"></embed>
+
+## Activity
+
+FILE: [correlation-and-regression-STARTER.xlsx](https://github.com/coltongearhart/math125/blob/main/stats/activities/correlation-and-regression-STARTER.docx), includes directions.
+
+Instructors can contact me for keys :)
