--- a/stats-normal-distribution.qmd
+++ b/stats-normal-distribution.qmd
@@ -14,3 +14,11 @@ FILE: [normal-distribution-STARTER.docx](https://github.com/coltongearhart/math1
 
 <embed src="stats/table-normal-distribution.pdf" type="application/pdf" width="100%" height="500px"></embed>
 
+## Activity
+
+FILE: [normal-distributions.docx](https://github.com/coltongearhart/math125/blob/main/stats/activities/normal-distributions.docx)
+
+Instructors can contact me for keys :)
+
+<embed src="stats/activities/normal-distributions.pdf" type="application/pdf" width="100%" height="1000px"></embed>
+
